--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
     "glob": "^7.1.1",
+    "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
