--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-ga": "^2.1.2",
     "sequelize": "^3.30.1",
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
